--- a/index.html
+++ b/index.html
@@ -5,30 +5,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/styles.css">
   
   <title>Frontend Mentor | Rock, Paper, Scissors</title>
 
-  Score
-  Rules
-
-  You Picked
-  The House Picked
-
-  You Win
-  You Lose
-
-  Play Again
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+  <section id="main-con">
 
+  <header >
+    <div class="header-con">
+      <h1 class="header-text">
+        <span>Rock</span>
+        <span>Papper</span>
+        <span>Scissors</span>  
+      </h1>  
+      <div class="score-con">
+        <p class="score-text">score</p>
+        <h1 class="score-value">12</h1>
+      </div>
+    </div>
+  </header>
+  <main id="game-con">
+      
+        <button class='option' id='papper-con'><span >
+        <img src="./images/icon-paper.svg" alt="Papper"/>
+        </span></button >
+        <button
+        class='option' id='scissors-con' >
+        <span >
+            <img src="./images/icon-scissors.svg" alt="Scissors"/>
+        </span></button>
+        <button 
+        class='option' id='rock-con'>
+        <span >
+          <img src="./images/icon-rock.svg" alt="Rock"/>
+        </span></button>
+     
+  </main>
+  <section id="result-con">
+    <div>
+      <p class="choice">You Picked</p>
+      <p class="choice"> The House Picked</p>
+    </div>
+    <div id='result'>
+       <button class='option' id='papper-con'><span >
+        <img src="./images/icon-paper.svg" alt="Papper"/>
+        </span></button >
+        <button
+        class='option' id='scissors-con' >
+        <span >
+            <img src="./images/icon-scissors.svg" alt="Scissors"/>
+        </span></button>
 
+    </div>
+  </section>
+
+    <button id="rules-con">Rules</button>
   
+  </section>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
